--- a/InStock/InStock/appsettings.json
+++ b/InStock/InStock/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DELLARE\\SQLEXPRESS01;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=InStockDB;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   }
 }
