Added Angular Email

--- a/InStock/InStock/appsettings.Development.json
+++ b/InStock/InStock/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MailSettings": {
+    "Mail": "instock585@gmail.com",
+    "DisplayName": "InStock",
+    "Password": "1InStockprt",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
