--- a/InStock/InStock/InStock.csproj
+++ b/InStock/InStock/InStock.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Elmah.Io.AspNetCore" Version="3.10.122" />
     <PackageReference Include="log4net" Version="2.0.10" />
+    <PackageReference Include="MailKit" Version="2.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
@@ -28,6 +29,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="MimeKit" Version="2.9.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
   </ItemGroup>
 
@@ -49,6 +51,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200923092102_latest.cs" />
     <Compile Remove="Migrations\20200923092102_latest.Designer.cs" />
+    <Compile Remove="Migrations\20200928085038_third.cs" />
+    <Compile Remove="Migrations\20200928085038_third.Designer.cs" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
