--- a/InStock/InStock/appsettings.json
+++ b/InStock/InStock/appsettings.json
@@ -10,5 +10,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\SQLEXPRESS; Database=InStockDB; Connect Timeout=30;Trusted_Connection=True;MultipleActiveResultSets=true;"
 
+  },
+  "MailSettings": {
+    "Mail": "<fromemail>",
+    "DisplayName": "<displayname>",
+    "Password": "<yourpasswordhere>",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
