--- a/InStock/InStock/appsettings.json
+++ b/InStock/InStock/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLEXPRESS; Database=InStock2DB; Connect Timeout=30;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS; Database=InStockDB; Connect Timeout=30;Trusted_Connection=True;MultipleActiveResultSets=true;"
 
   },
   "MailSettings": {
