--- a/InStock/InStock/Properties/launchSettings.json
+++ b/InStock/InStock/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    //"anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:50273",
       "sslPort": 44320
