--- a/InStock/InStock/InStock.csproj
+++ b/InStock/InStock/InStock.csproj
@@ -52,12 +52,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="Migrations\20200923092102_latest.cs" />
-    <Compile Remove="Migrations\20200923092102_latest.Designer.cs" />
-    <Compile Remove="Migrations\20200928085038_third.cs" />
-    <Compile Remove="Migrations\20200928085038_third.Designer.cs" />
-    <Compile Remove="Migrations\20201005034056_searchChange.cs" />
-    <Compile Remove="Migrations\20201005034056_searchChange.Designer.cs" />
+    <ProjectReference Include="..\_BLL\_BLL.csproj" />
+    <ProjectReference Include="..\_DAL\_DAL.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
