--- a/InStock/_DAL/_DAL.csproj
+++ b/InStock/_DAL/_DAL.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="MimeKit" Version="2.9.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\COMMON\COMMON.csproj" />
+  </ItemGroup>
+
 </Project>
