--- a/InStock/InStock/ClientApp/package.json
+++ b/InStock/InStock/ClientApp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@types/lodash": "^4.14.162",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.2",
     "core-js": "^3.3.3",
