--- a/InStock/InStock/ClientApp/package.json
+++ b/InStock/InStock/ClientApp/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "8.2.12",
     "@angular/core": "8.2.12",
     "@angular/forms": "8.2.12",
+    "@angular/google-maps": "^10.2.4",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "8.2.12",
     "@angular/platform-browser-dynamic": "8.2.12",
